--- a/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
+++ b/src/bp-templates/bp-nouveau/css/buddypress-rtl.css
@@ -19181,18 +19181,16 @@ span.icons:before {
   flex: auto;
 }
 
-.group-messages.public-message .bb-groups-messages-right .bp-select-members-wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-
 .group-messages.public-message .bb-groups-messages-right .bp-select-members-wrap .group-messages-helper-text {
   min-width: 70px;
   color: #c3c6c9;
+  float: right;
+  margin-top: 6px;
+}
+
+.group-messages.public-message .bb-groups-messages-right .bp-select-members-wrap .select2.select2-container {
+  float: right;
+  width: calc(100% - 100px) !important;
 }
 
 .group-messages.public-message .bb-groups-messages-right .bb-groups-messages-right-top {
@@ -19291,18 +19289,16 @@ span.icons:before {
   color: #fff;
 }
 
-.group-messages.private-message #group-messages-container .bb-groups-messages-right .bp-select-members-wrap {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -ms-flex-align: center;
-  align-items: center;
-}
-
 .group-messages.private-message #group-messages-container .bb-groups-messages-right .bp-select-members-wrap .group-messages-helper-text {
   min-width: 70px;
   color: #c3c6c9;
+  float: right;
+  margin-top: 6px;
+}
+
+.group-messages.private-message #group-messages-container .bb-groups-messages-right .bp-select-members-wrap .select2.select2-container {
+  float: right;
+  width: calc(100% - 100px) !important;
 }
 
 .group-messages.private-message #group-messages-container .bb-groups-messages-right .bb-groups-messages-right-top {
